<resources>
    <string name="app_name">androidtutorial4</string>
    <string name="action_settings">Settings</string>
    <string name="special_katar">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font
            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.></string>

    <string name="all_i_need">
          You are all I need \n<font fgcolor="#FFFFFFF">♠  are all ♥ need</font>
        \nYou are all I need \n<font fgcolor="#FFFFFFF">♠  are all ♥ need</font>
        \nYou are all I need \n<font fgcolor="#FFFFFFF">♠  are all ♥ need</font>
        \nYou are all I need \n<font fgcolor="#FFFFFFF">♠  are all ♥ need</font>
    </string>

    <string name="start">start</string>
    <string name="text">text</string>
    
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="sensor">Sensor</string>

    <string name="fade_in">fade_in</string>
    <string name="fade_out">fade_out</string>
    <string name="slide_in_left">slide_in_left</string>
    <string name="slide_out_right">slide_out_right</string>
    
</resources>
