<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewAnimator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewAnimatorP016"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:gravity="center"
            android:text="@string/slide_in_left"
            android:background="#FFBB00"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:gravity="center"
            android:text="@string/slide_out_right"
            android:background="#00FFBB"/>
    </ViewAnimator>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="first"
            android:id="@+id/buttonFirstP016"
            android:background="#00FFBB"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="second"
            android:id="@+id/buttonSecondP016"
            android:background="#FFBB00"/>
    </LinearLayout>

    <ViewAnimator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewAnimator2P016"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:gravity="center"
            android:text="@string/fade_in"
            android:background="#FFBB00"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:gravity="center"
            android:text="@string/fade_out"
            android:background="#00FFBB"/>
    </ViewAnimator>

</LinearLayout>